--- a/source/_posts/【雪饼加油】中秋节，你们在哪里？.md
+++ b/source/_posts/【雪饼加油】中秋节，你们在哪里？.md
@@ -12,15 +12,9 @@ tags: []
 #midautumnfestival
 
 <!-- more --> 
-![](https://imgur.com/aHxSteQ)
-![](https://imgur.com/R87UHXD)
-![](https://imgur.com/EN7wPdz)
-![](https://imgur.com/p0rtYeB)
-![](https://imgur.com/oafr56a)
 
-
-<img src="https://imgur.com/aHxSteQ" width="100%">
-<img src="https://imgur.com/R87UHXD" width="100%">
-<img src="https://imgur.com/EN7wPdz" width="100%">
-<img src="https://imgur.com/p0rtYeB" width="100%">
-<img src="https://imgur.com/oafr56a" width="100%">
+<img src="https://i.imgur.com/aHxSteQ.jpeg" width="100%">
+<img src="https://i.imgur.com/R87UHXD.jpeg" width="100%">
+<img src="https://i.imgur.com/EN7wPdz.jpeg" width="100%">
+<img src="https://i.imgur.com/p0rtYeB.jpeg" width="100%">
+<img src="https://i.imgur.com/oafr56a.jpeg" width="100%">
