Update Post “【09-26-案件通报】关注919“雪-饼”失联事件：警方疑已对王建兵、黄雪琴采取“指定居所监视居住””

--- a/source/_posts/【09-26-案件通报】关注919“雪-饼”失联事件：警方疑已对王建兵、黄雪琴采取“指定居所监视居住”.md
+++ b/source/_posts/【09-26-案件通报】关注919“雪-饼”失联事件：警方疑已对王建兵、黄雪琴采取“指定居所监视居住”.md
@@ -18,7 +18,7 @@ tags:
 
 9月20日下午，王建兵的朋友于黄埔长洲用于储物的出租屋也遭到警方强行撬锁进入搜查，并带走大量物品和行李箱。
 
-据多方了解，“雪饼”两人被抓主要原因或涉及日常在王家中的朋友聚会。9月19日至9月25日期间，警方已多次传唤多个曾参与王建兵（煎饼）家中聚会的朋友，要求其指控“雪饼”两人涉嫌组织有关时政类讨论的活动，传唤时间长达24小时。
+据多方了解，[“雪饼”](https://free-xueq-jianb.github.io/self/)两人被抓主要原因或涉及日常在王家中的朋友聚会。9月19日至9月25日期间，警方已多次传唤多个曾参与王建兵（煎饼）家中聚会的朋友，要求其指控“雪饼”两人涉嫌组织有关时政类讨论的活动，传唤时间长达24小时。
 
 警方的指控与事实严重不符。据去过王建兵家中的朋友反馈，“煎饼”本人性格和善，乐于助人，在其家中的朋友聚会向來氛围轻松，多以分享生活日常、互相关怀为主。警方试图以这样单纯的朋友聚会来指控“雪饼”两人犯罪，令人难以置信和愤慨！
 
