--- a/source/_posts/09-26-en.md
+++ b/source/_posts/09-26-en.md
@@ -4,11 +4,14 @@ title: '【09/26 Case Updates】Concern for 919 missing "Huang & Wang" case: The
   police have likely imposed  “Residential surveillance in a designated location
   (RSDL)"on  Wang Jianbing and Huang Xueqin.'
 date: 2021-09-26T12:30:13.134Z
+cover: https://i.imgur.com/APuVjBI.png
 categories:
   - 案件通报
 tags:
   - English
 ---
+![](https://i.imgur.com/APuVjBI.png)
+
 Women’s rights journalist Huang Xueqin and occupational disease rights advocate Wang Jianbing (nicknamed “Pancake”) were found to be missing at the same time on September 19th. The two originally planned to go to Shenzhen from Guangzhou on September 20th. Huang had planned to depart from the Hong Kong airport by entering HK border through the Shenzhen port, whereas Wang was simply to see her off.  Multiple sources confirmed that Guangzhou police are currently holding both Huang and Wang in police custody. Huang and Wang were suspected to be detained for the charge of "inciting subversion of state power". The police have likely imposed “residential surveillance in a designated location (RSDL) " on both of them. Sources revealed that the police likely based their suspicion of the two solely on the weekly gatherings in Wang Jianbing's place. Both Huang and Wang have been missing for over a week as of today.
 
 <!--more-->
