Update Post “【雪饼加油】我的朋友失联了，她的名字叫雪琴”

--- a/source/_posts/【雪饼加油】我的朋友失联了，她的名字叫雪琴.md
+++ b/source/_posts/【雪饼加油】我的朋友失联了，她的名字叫雪琴.md
@@ -8,6 +8,7 @@ categories:
 tags:
   - 黄雪琴
 ---
+文/艾石
 
 18年1月初的一个周六晚上，一个朋友叫上我，说可以去看一个激动人心的现场。
 
@@ -44,3 +45,5 @@ tags:
 然而，这个诚挚、温和、爽朗、利落的人，又一次失去了自由。
 
 > 事件背景：9月19日下午3点前后，广州警方强行将王建兵和即将出国留学的黄雪琴带走。据多方了解，警方疑已对两人采取指定地点监视居住，被抓原因或涉及日常的朋友聚会。警察多次传唤两人的朋友，要求他们指控两人涉嫌组织有关时政讨论类的活动。黄雪琴本已获英国志奋领奖学金（Chevening Scholarship）支持，计划9月20号前往萨塞克斯大学（University of Sussex）就读发展学硕士。王建兵则计划到深圳为她送行。目前，两人已失联11天。
+
+[原文网址](https://matters.news/@Ashtone/%E6%88%91%E7%9A%84%E6%9C%8B%E5%8F%8B%E5%A4%B1%E8%81%94%E4%BA%86-%E5%A5%B9%E7%9A%84%E5%90%8D%E5%AD%97%E5%8F%AB%E9%9B%AA%E7%90%B4-bafyreihpetlbd3io72d6foqm46zrl2a4izzhi4gusj2xq4viwktuq3m7d4?fbclid=IwAR3EzEOZa7nUk5ZJrZ1H9rDPjFNPNzpd7z81rvnfbVCt7dx3Qsp_mPdo-vI)
