--- a/source/_posts/【09-26-案件通报】关注919“雪-饼”失联事件：警方疑已对王建兵、黄雪琴采取“指定居所监视居住”.md
+++ b/source/_posts/【09-26-案件通报】关注919“雪-饼”失联事件：警方疑已对王建兵、黄雪琴采取“指定居所监视居住”.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 【09/26 案件通报】关注919“雪&饼”失联事件：警方疑已对王建兵、黄雪琴采取“指定居所监视居住”
+title: 【09/26 案件通报】关注919“雪&饼”被捕事件：警方疑已对王建兵、黄雪琴采取“指定居所监视居住”
 date: 2021-09-26T03:53:40.244Z
 cover: https://i.imgur.com/QW5zjfh.jpg
 categories:
