Update Post “【媒体报道】黃雪琴：「哪有記者不發聲」”

--- a/source/_posts/【媒体报道】黃雪琴：「哪有記者不發聲」.md
+++ b/source/_posts/【媒体报道】黃雪琴：「哪有記者不發聲」.md
@@ -182,3 +182,11 @@ categories:
 #### 除黃雪琴外，所有受訪者為化名。
 
 #### 特約編輯：雨貓
+
+欢迎转发：
+
+官网版: https://ngocn2.org/article/2021-10-26-huang-xue-qin/
+
+IPFS版（可墙内传播）: https://gateway.pinata.cloud/ipns/k2k4r8mjf4sdgf6oh5337x4pv5aj8lb4b9px3wh5g6rpchvqztpdwfc0/article/2021-10-26-huang-xue-qin/
+
+PDF版（可墙内传播）: http://img.mailinblue.com/4161820/attachments/10261.pdf
