Update Post “【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家”

--- a/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
+++ b/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
@@ -11,10 +11,24 @@ tags:
 ---
 ![](https://i.imgur.com/ePMntyV.jpg)
 
+![](https://i.imgur.com/yUagWgx.jpg)
+致王建兵：
+
+谢谢你存在以及陪伴我在乎的人们。你们都很勇敢，你们的遭遇也令人不舍，那不是你们应该被对待的方式！！
+
+![](https://i.imgur.com/pEuixer.jpg)
+致黄雪琴：
+
+捍卫真相与事实的勇气与坚持并非天生而来，但需要永远为了内心真正的声音——关于正义与人本身的声音的努力和不放弃。
+
 ![](https://i.imgur.com/FsvxPSV.jpg)
+致黄雪琴：
+
 亲爱的雪琴，感谢你为寻找真相一直努力不懈，甚至牺牲自由。你一直都是站在真理、正义的一边。祝愿健康平安、坚持不放弃。
 <div style="text-align: right">淑明<br>
 1212021</div>
 
 ![](https://i.imgur.com/KeE4AwA.jpg)
+致王建兵：
+
 建兵好，应该说煎饼好，因为我们唯三次的见面，都是这样称你。我是在你被消失之后，才知道你的勇气、在民间的长久作为。荣光定归于你，加油！回头喝两口吧
