Update Post “【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家”

--- a/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
+++ b/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
@@ -11,6 +11,38 @@ tags:
 ---
 ![](https://i.imgur.com/ePMntyV.jpg)
 
+![](https://i.imgur.com/DHFp8jb.jpg)
+亲爱的黄雪琴：
+
+祝身体健康、心灵平安
+
+祝早日重获自由
+
+再可以继续寻找真相
+
+<div style="text-align: right">支持你的<br>melody</div>
+
+![](https://i.imgur.com/7timyMT.jpg)
+亲爱的王建兵：
+
+感谢你为他人无私的付出，造福社群。祝愿早日重获自由。
+
+<div style="text-align: right">-港人<br>淑明</div>
+
+![](https://i.imgur.com/TsIq70c.jpg)
+致黄雪琴：
+
+一刻的黑暗 ❤️
+
+不会使你再也看不到光明
+
+谢谢你启发我 ❤️
+
+也陪伴我在乎的人们
+
+你们都很勇敢 ❤️
+
+
 ![](https://i.imgur.com/yUagWgx.jpg)
 致王建兵：
 
