Update Post “【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家”

--- a/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
+++ b/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
@@ -11,6 +11,40 @@ tags:
 ---
 ![](https://i.imgur.com/ePMntyV.jpg)
 
+![](https://i.imgur.com/xfpWvB6.jpg)
+
+致王建兵：
+
+「在茫茫黑夜中
+
+等候黎明到来
+
+主每天同在 无论白昼黑夜
+
+在茫茫黑夜中仰望星空之际
+
+点点繁星闪烁 主在指引安慰
+
+在茫茫黑夜中 坎坷绝望灰心
+
+是祂恩手扶持 慰藉到底
+
+等待、盼望 黎明之光 以马内利」
+
+李英强长老被捕后，十岁的女儿写下的诗
+
+![](https://i.imgur.com/vsEj8w8.jpg)
+
+Dear 建兵：
+
+我们素未谋面，但不减我对你和一切所努力的：种种敬意和感激！「基督降生的意义，在生命于寒夜白雪凛冽中仍平安、暖意、生机盎然」
+
+![](https://i.imgur.com/64xrfGJ.jpg)
+
+Dear 雪琴：
+
+我也是广东人，这个海洋的省份从来航向普世文明：性别平权、环境关注。真以你努力的为荣！圣诞节，马槽的圣婴诞生会改变一切黑暗！
+
 ![](https://i.imgur.com/DHFp8jb.jpg)
 亲爱的黄雪琴：
 
