Update Post “【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家”

--- a/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
+++ b/source/_posts/【给雪饼的明信片合集】新年，我们不能也不会失去希望，等你们回家.md
@@ -11,6 +11,121 @@ tags:
 ---
 ![](https://i.imgur.com/ePMntyV.jpg)
 
+![](https://i.imgur.com/XlicWlz.jpg)
+
+建兵：
+
+我始终不知道该怎么面对你被抓这件事。如今，你完完全全地失去了自由，所有赞美都失去了重量，我祈求这一切苦难都无法将你击倒。请一定要想办法让身体保持健康！
+
+明天就是新年了，我们不能也不会失去希望。
+
+想念你，我珍贵的朋友～
+
+<div style="text-align: right">Yang<br>2021.12.31</div>
+
+![](https://i.imgur.com/WmFKRES.jpg)
+
+雪琴：
+
+想起你，我只记得那些你神采奕奕的可爱模样。你陪伴她人度过许多黑暗时刻，也用自己的力量为她们重新找回正义的光明。
+
+请一定平安回来！回到爱和自由中间～
+
+<div style="text-align: right">Yang<br>2021.12.31</div>
+
+![](https://i.imgur.com/SV1Sy7C.jpg)
+
+致王建兵：
+
+我们等你回来
+
+![](https://i.imgur.com/gy7NrIS.jpg)
+
+致王建兵：
+
+有人说弱肉强食是道
+
+你说从善如流才是
+
+你用你的心血反哺你的祖国
+
+哪怕收获荆棘
+
+世界因你有了更多美好
+
+<div style="text-align: right">王 致敬<br>2021.12.31</div>
+
+![](https://i.imgur.com/c4hsgQH.jpg)
+
+致黄雪琴：
+
+雪琴，你是光 也许你并不知道
+
+可是大地知道 种子知道
+
+夜晚和河流知道
+
+无论把你关在哪里
+
+你的光都会破门而出
+
+<div style="text-align: right">王 致敬<br>2021.12.31</div>
+
+![](https://i.imgur.com/jBxddFL.jpg)
+致黄雪琴：
+
+等你们回来爬山。
+
+<div style="text-align: right">卢昱宇<br>2021.12.31</div>
+
+![](https://i.imgur.com/X0HaCX4.jpg)
+致王建兵：
+
+等你们回来爬山。
+
+<div style="text-align: right">卢昱宇<br>2021.12.31</div>
+
+
+![](https://i.imgur.com/aWjcXZd.jpg)
+
+建兵好：
+
+之前并不认识你，从你父亲口中听到你是个「好娃娃」，我是半个西北人，等你回来，我们再用西北话聊天！千万保重！
+
+<div style="text-align: right">Vrsus<br>2021.12.30</div>
+
+![](https://i.imgur.com/dA4qzN4.jpg)
+
+雪琴好，
+
+敬佩你的坚韧，
+
+希望你安然无恙，千万保重自己！
+
+<div style="text-align: right">Vrsus<br>2021.12.30</div>
+
+![](https://i.imgur.com/EC12keQ.jpg)
+
+致黄雪琴：
+
+天气冷了，
+
+您好吗？
+
+无辜者系狱要到几时呢？
+
+我们会一直关注，直到您重获自由！
+
+![](https://i.imgur.com/VjYiAgK.jpg)
+
+雪琴：
+
+等你回来
+
+一起吃饭
+
+“为众人抱薪者，不可使其冻毙于风雪“
+
 ![](https://i.imgur.com/xfpWvB6.jpg)
 
 致王建兵：
