Update Post “在臺北，我們撐雪餅！”

--- a/source/_posts/在臺北，我們撐雪餅！.md
+++ b/source/_posts/在臺北，我們撐雪餅！.md
@@ -3,6 +3,10 @@ layout: post
 title: 在臺北，我們撐雪餅！
 date: 2022-02-20T10:35:00.099Z
 cover: https://i.imgur.com/HP3P93d.jpg
+categories:
+  - 雪饼的朋友心声
+tags:
+  - 戴著雪餅遊世界
 ---
 ![](https://i.imgur.com/HP3P93d.jpg)
 
