Update Post “在臺北，我們撐雪餅！”

--- a/source/_posts/在臺北，我們撐雪餅！.md
+++ b/source/_posts/在臺北，我們撐雪餅！.md
@@ -12,6 +12,8 @@ tags:
 
 冬天的臺北，陰雨綿綿、寒風吹拂。雪琴與建兵，你們所在的地方又是如何呢？我們不知道你們去了哪裡，也不知道你們在想些什麼，又在感受些什麼。最開始，我們聽說的是失蹤，後來變成了消失，再後來我們清楚地知道了這是一場蓄意的逮捕。而你們被抓捕的理由竟然如此荒唐———「在家中與朋友聚會」。
 
+<!-- more -->
+
 記得以前看過動物星球的紀錄片，在南極冬天的冰天雪地裡，企鵝們的體溫很容易流失，所以它們聚集在一起、抱成一團來取暖，從上方看去，企鵝群黑白羽毛交織形成的圖案宛如黑夜中的燈火綿延。在凜凜寒冬中，動物尚能與同伴一起抱團相聚，保留體內的溫暖。而現在，連這樣的近乎本能的行為都被國家所禁止，被警察們的手銬與獵槍所瞄準。
 
 ![](https://i.imgur.com/tmj8csx.jpg)
