Update Post “让我们与乌克兰站在一起！-停止战争！-释放雪饼！”

--- a/source/_posts/让我们与乌克兰站在一起！-停止战争！-释放雪饼！.md
+++ b/source/_posts/让我们与乌克兰站在一起！-停止战争！-释放雪饼！.md
@@ -7,3 +7,5 @@ categories:
   - 雪饼的朋友心声
 ---
 ![](https://i.imgur.com/IaoR9zo.png)
+
+如今雪饼被秘密关押无法发声，但我们相信凭他们一直以来的人道主义立场，绝对会深深痛恨这场战争的发生。每一场战争都是对全人类的战争，对人性本身的战争。关心雪饼，也关心每一个被战争影响的个体。
