--- a/source/_posts/8m.md
+++ b/source/_posts/8m.md
@@ -1,6 +1,17 @@
 ---
 layout: post
-title: 8M
+title: 三八國際婦女節，勿忘獄中雪餅！
 date: 2022-03-08T08:21:38.886Z
+cover: https://i.imgur.com/MNoX6uz.png
+categories:
+  - 雪饼的朋友心声
 ---
-test
+國際婦女節的由來與戰後女性勞工的權利意識抬頭有關，淵源可追溯到1908年，當年1.5萬名女性在美國紐約和平集會遊行，抗議僱主盤剝女工，要求縮短工時、提高工資，並爭取女性選舉投票權。
+
+2021年9月19日失蹤至今的中國獨立記者黃雪琴與NGO工作者王建兵，恰恰就是兩位長期關注女性與工人的青年，國際婦女節這天我們牢記他們仍在獄中！
+
+此海報與1914 年德國的國際婦女節海報呼應，1914年海報中女工揮舞旗幟，搖旗吶喊，爭取女性勞工的權利；而今日，在極權國度中，記者手持相機，NGO走訪社群，便有如揮舞旗幟般具有抵抗意志，雪琴與建兵替各種群體發聲並探討社會議題，卻也因如此，遭逢囹圄之災。
+
+我們邀請每個關注雪餅的人分享這張圖片，讓更多人在國際婦女節這天，認識雪餅的遭遇，並成為支持他們的力量。
+
+![](https://i.imgur.com/MNoX6uz.png)
