Update Post “1108_en”

--- a/source/_posts/1108_en.md
+++ b/source/_posts/1108_en.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "【11/08 Case Updates】9/19 Huang&Wang Detention Watch: Arrest under
-  “inciting subversion of state power” Conformed, Attorney Representation
+  “inciting subversion of state power” Confirmed, Attorney Representation
   Denied"
 date: 2021-11-12T05:12:46.711Z
 cover: https://i.imgur.com/LbS4eQQ.png
