Update Post “【案件更新】雪饼二人已被正式移送广州市检察院审查起诉”

--- a/source/_posts/【案件更新】雪饼二人已被正式移送广州市检察院审查起诉.md
+++ b/source/_posts/【案件更新】雪饼二人已被正式移送广州市检察院审查起诉.md
@@ -6,7 +6,11 @@ cover: https://i.imgur.com/cPymnfS.jpg
 categories:
   - 案件通报
 ---
+![](https://i.imgur.com/cPymnfS.jpg)
+
 最新消息：警方告知，#黄雪琴 和 #王建兵 （雪饼案）已于2022年3月27日正式移送 #广州市检察院 审查起诉。
+
+<!-- more -->
 
 据刑诉法第37、38条规定，辩护律师自检察院对案件审查起诉之日起，可以与当事人会见和通信、核实有关案件证据；同时可以查阅、摘抄、复制案件相关的的案卷材料。广州警方在超过6个月的侦查羁押期间，以涉及国家安全为由，从未允许雪饼律师对两人进行会见。现已侦查终结，我们期待雪饼的律师可以顺利地进行阅卷和会见。
 
