--- a/source/_posts/news0812.md
+++ b/source/_posts/news0812.md
@@ -9,7 +9,7 @@ categories:
 
 <!-- more -->
 
-这几个月，围绕黄雪琴案件律师代理权出现众多疑团。3月下旬，黄雪琴家属委托了雪琴的好友万淼淼律师为其辩护；4月2日，黄雪琴本人也在家属对万律师的委托书上签字。可是，后来传出一份黄雪琴解除万律师的声明，落款日期为4月16日。两周前本人才刚刚确认了律师委托，为何两周后就要解除委托呢？这种解除行为是否是当事人自愿的？又是在什么情况下自愿的？为了确认当事人的真实意愿，4月22日，万淼淼律师申请会见黄雪琴，在线上预约成功情况，被看守所电话通知因防疫原因不能会见。万律师也申请了检察院阅卷，在满意广州市检察院防疫条件下，竟然被告知“近亲家属委托书无用”的特殊情况。但同在4月下旬，公安部才专门派人到成都告知万律师，表示北京经过考虑同意万律师给黄雪琴进行辩护。
+这几个月，围绕黄雪琴案件律师代理权出现众多疑团。3月下旬，黄雪琴家属委托了雪琴的好友万淼淼律师为其辩护；4月2日，黄雪琴本人也在家属对万律师的委托书上签字。可是，后来传出一份黄雪琴解除万律师的声明，落款日期为4月16日。两周前本人才刚刚确认了律师委托，为何两周后就要解除委托呢？这种解除行为是否是当事人自愿的？又是在什么情况下自愿的？为了确认当事人的真实意愿，4月22日，万淼淼律师申请会见黄雪琴，在线上预约成功情况，被看守所电话通知因防疫原因不能会见。万律师也申请了检察院阅卷，在满足广州市检察院防疫条件下，竟然被告知“近亲家属委托书无用”的特殊情况。但同在4月下旬，公安部才专门派人到成都告知万律师，表示北京经过考虑同意万律师给黄雪琴进行辩护。
 
 一方面被解除委托，一方面却被告知可以为当事人辩护，这些自相矛盾的信息让这个案件律师代理权变得错综复杂。目前，黄雪琴的代理律师已改由政府指派的广东曜灵律师事务所合伙人之一[杨树筠](http://credit.gdla.org.cn/front/indexFront/lawyerDetailNew?lawyerId=106742) （ http://credit.gdla.org.cn/front/indexFront/lawyerDetailNew?lawyerId=106742 ） 代理。这一情况明显不合常理，万淼淼律师不仅是雪琴的好友，在她2019年第一次被捕的时候，也是她的代表律师，这次却突然被更换，这不禁让人怀疑这是非自愿做出的决定。但由于一直无法会见，所以也没有雪琴更多的消息，情况非常让人担忧。
 
