--- a/source/_posts/365.md
+++ b/source/_posts/365.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "365"
+title: 【雪饼一年】行动者黄雪琴和王建兵（“雪饼”）被捕一年声明
 date: 2022-09-18T14:56:29.896Z
 cover: https://i.imgur.com/Lc39Yw6.png
 categories:
