--- a/source/_posts/365.md
+++ b/source/_posts/365.md
@@ -6,7 +6,7 @@ cover: https://i.imgur.com/Lc39Yw6.png
 categories:
   - 案件通报
 ---
-<!--\\[if gte mso 9]><xml>
+<!--\\\[if gte mso 9]><xml>
  <w:WordDocument>
   <w:View>Normal</w:View>
   <w:Zoom>0</w:Zoom>
@@ -55,9 +55,9 @@ categories:
    <m:intLim m:val="subSup"/>
    <m:naryLim m:val="undOvr"/>
   </m:mathPr></w:WordDocument>
-</xml><!\\[endif]-->
+</xml><!\\\[endif]-->
 
-<!--\\[if gte mso 9]><xml>
+<!--\\\[if gte mso 9]><xml>
  <w:LatentStyles DefLockedState="false" DefUnhideWhenUsed="false"
   DefSemiHidden="false" DefQFormat="false" DefPriority="99"
   LatentStyleCount="376">
@@ -636,9 +636,9 @@ categories:
   <w:LsdException Locked="false" SemiHidden="true" UnhideWhenUsed="true"
    Name="Smart Link"/>
  </w:LatentStyles>
-</xml><!\\[endif]-->
+</xml><!\\\[endif]-->
 
-<!--\\[if gte mso 10]>
+<!--\\\[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -655,7 +655,7 @@ categories:
 	font-family:"Times New Roman",serif;
 	border:none;}
 </style>
-<!\\[endif]-->
+<!\\\[endif]-->
 
 <!--StartFragment-->
 
@@ -663,7 +663,7 @@ categories:
 
 时至今日，#MeToo行动者兼独立记者黄雪琴和劳工权益倡导者王建兵已经被任意羁押长达一年。两人于2021年10月27日被正式批准逮捕，2022年3月27日被正式移送检察院，历经两次退回补充侦查后，于2022年8月底首次移送广州市中级人民法院。雪饼两人现在被羁押于广州市第三看守所(据了解，2022年7月初，广州市第一看守所整体并入到第三看守所，因此雪饼二人的羁押所在地亦更改为广州市第三看守所)。
 
-**1.** 回顾消失的一年：两人被任意羁押，雪琴被迫撤换律师，公民社会伙伴遭遇警方骚扰**/**审讯**/**逼迁
+**1.** 回顾消失的一年：两人被任意羁押，雪琴被迫撤换律师，公民社会伙伴遭遇警方骚扰/审讯/逼迁
 
 **1.1** 雪饼两人强迫失踪后遭遇五个多月的单独关押。2021年9月19日，广州警方以两人长期在家中组织社会聚会为由，以涉嫌“煽动颠覆国家政权罪”强行抓捕了两人，且一直未给家属寄送法律规定的“拘留通知书”。直至2022年4月1日，王建兵与律师首次会见才得知，建兵于被捕后的五个多月内被警方以“疫情隔离”的名义在迄今无人知晓的地点进行非法的单独关押审讯，直到第六个月才转回看守所集体关押。王建兵在单独关押期间遭受了数十次的疲劳审讯和来自身心灵多方面的肉体和精神折磨——这与“指定居所监视居住（指监，RSDL）”的实际关押情形无异，但警方通过这种方式规避了在书面文件上使用备受国际社会及联合国批评的“指监”措施。黄雪琴的羁押情况类似，但因其过去一年间被严重剥夺通讯自由和律师会见权利，我们无法获知更多的具体细节。王建兵在被单独关押期间身心状况极受影响，不仅饮食不规律、肠胃功能变差，而且精神疲糜、深受抑郁症困扰；黄雪琴被关押的前半年，体重骤减5kg（11lb），而其本人被捕前已经很瘦，体重原本不及50kg。
 
