--- a/source/_posts/365.md
+++ b/source/_posts/365.md
@@ -6,7 +6,7 @@ cover: https://i.imgur.com/Lc39Yw6.png
 categories:
   - 案件通报
 ---
-<!--\\\\[if gte mso 9]><xml>
+<!--\\\\\[if gte mso 9]><xml>
  <w:WordDocument>
   <w:View>Normal</w:View>
   <w:Zoom>0</w:Zoom>
@@ -55,9 +55,9 @@ categories:
    <m:intLim m:val="subSup"/>
    <m:naryLim m:val="undOvr"/>
   </m:mathPr></w:WordDocument>
-</xml><!\\\\[endif]-->
+</xml><!\\\\\[endif]-->
 
-<!--\\\\[if gte mso 9]><xml>
+<!--\\\\\[if gte mso 9]><xml>
  <w:LatentStyles DefLockedState="false" DefUnhideWhenUsed="false"
   DefSemiHidden="false" DefQFormat="false" DefPriority="99"
   LatentStyleCount="376">
@@ -636,9 +636,9 @@ categories:
   <w:LsdException Locked="false" SemiHidden="true" UnhideWhenUsed="true"
    Name="Smart Link"/>
  </w:LatentStyles>
-</xml><!\\\\[endif]-->
+</xml><!\\\\\[endif]-->
 
-<!--\\\\[if gte mso 10]>
+<!--\\\\\[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -655,9 +655,11 @@ categories:
 	font-family:"Times New Roman",serif;
 	border:none;}
 </style>
-<!\\\\[endif]-->
+<!\\\\\[endif]-->
 
 <!--StartFragment-->
+
+![](https://i.imgur.com/Lc39Yw6.png)
 
 2021年9月19日下午，广州警方以涉嫌“煽动颠覆国家政权罪”强行抓捕了黄雪琴和王建兵（以下简称两人为“雪饼”），并以“防疫”为由对两人采取了长达五个多月的单独关押和秘密审讯，情形等同于“指定居所监视居住（RSDL)”——一种严重违反国际人权原则的羁押举措。两人参与和组织的每周日常朋友聚会被警方定性为威胁国家安全的行为。过去一年间警方以此持续罗织、编造罪证，逼迫黄雪琴撤换律师，审讯和骚扰数十公民社会行动者，借此进一步打压已经疲软的中国公民社会。
 
