Update Post “365-en”

--- a/source/_posts/365-en.md
+++ b/source/_posts/365-en.md
@@ -3,6 +3,7 @@ layout: post
 title: Statement on the One-year Enforced Disappearance and Arbitrary Detention
   of Huang Xueqin and Wang Jianbing, From Friends
 date: 2022-09-19T03:34:09.284Z
+cover: https://i.imgur.com/Lc39Yw6.png
 categories:
   - 案件通报
 tags:
@@ -662,6 +663,8 @@ tags:
 <!--StartFragment-->
 
 ![](https://i.imgur.com/Lc39Yw6.png)
+
+中文版请点击[这里](../365)
 
 On the afternoon of September 19, 2021, Human rights defenders Huang **Xue**qin and Wang Jian**bing** (“***XueBing***” for short) were forcibly arrested by the Guangzhou police on suspicion of "inciting subversion of state power”. Using COVID as an excuse, they were held for at least five months in solitary confinement, and subjected to secret interrogation, in conditions similar to those of ‘residential surveillance in a designated location’, or RSDL., a form of detention that seriously violates international human rights principles.
 
