--- a/source/_posts/365.md
+++ b/source/_posts/365.md
@@ -6,7 +6,7 @@ cover: https://i.imgur.com/Lc39Yw6.png
 categories:
   - 案件通报
 ---
-<!--\\\\\[if gte mso 9]><xml>
+<!--\\\\\\[if gte mso 9]><xml>
  <w:WordDocument>
   <w:View>Normal</w:View>
   <w:Zoom>0</w:Zoom>
@@ -55,9 +55,9 @@ categories:
    <m:intLim m:val="subSup"/>
    <m:naryLim m:val="undOvr"/>
   </m:mathPr></w:WordDocument>
-</xml><!\\\\\[endif]-->
+</xml><!\\\\\\[endif]-->
 
-<!--\\\\\[if gte mso 9]><xml>
+<!--\\\\\\[if gte mso 9]><xml>
  <w:LatentStyles DefLockedState="false" DefUnhideWhenUsed="false"
   DefSemiHidden="false" DefQFormat="false" DefPriority="99"
   LatentStyleCount="376">
@@ -636,9 +636,9 @@ categories:
   <w:LsdException Locked="false" SemiHidden="true" UnhideWhenUsed="true"
    Name="Smart Link"/>
  </w:LatentStyles>
-</xml><!\\\\\[endif]-->
+</xml><!\\\\\\[endif]-->
 
-<!--\\\\\[if gte mso 10]>
+<!--\\\\\\[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -655,7 +655,7 @@ categories:
 	font-family:"Times New Roman",serif;
 	border:none;}
 </style>
-<!\\\\\[endif]-->
+<!\\\\\\[endif]-->
 
 <!--StartFragment-->
 
@@ -665,21 +665,27 @@ categories:
 
 时至今日，#MeToo行动者兼独立记者黄雪琴和劳工权益倡导者王建兵已经被任意羁押长达一年。两人于2021年10月27日被正式批准逮捕，2022年3月27日被正式移送检察院，历经两次退回补充侦查后，于2022年8月底首次移送广州市中级人民法院。雪饼两人现在被羁押于广州市第三看守所(据了解，2022年7月初，广州市第一看守所整体并入到第三看守所，因此雪饼二人的羁押所在地亦更改为广州市第三看守所)。
 
-**1.** 回顾消失的一年：两人被任意羁押，雪琴被迫撤换律师，公民社会伙伴遭遇警方骚扰/审讯/逼迁
+## **1.** 回顾消失的一年：两人被任意羁押，雪琴被迫撤换律师，公民社会伙伴遭遇警方骚扰/审讯/逼迁
 
-**1.1** 雪饼两人强迫失踪后遭遇五个多月的单独关押。2021年9月19日，广州警方以两人长期在家中组织社会聚会为由，以涉嫌“煽动颠覆国家政权罪”强行抓捕了两人，且一直未给家属寄送法律规定的“拘留通知书”。直至2022年4月1日，王建兵与律师首次会见才得知，建兵于被捕后的五个多月内被警方以“疫情隔离”的名义在迄今无人知晓的地点进行非法的单独关押审讯，直到第六个月才转回看守所集体关押。王建兵在单独关押期间遭受了数十次的疲劳审讯和来自身心灵多方面的肉体和精神折磨——这与“指定居所监视居住（指监，RSDL）”的实际关押情形无异，但警方通过这种方式规避了在书面文件上使用备受国际社会及联合国批评的“指监”措施。黄雪琴的羁押情况类似，但因其过去一年间被严重剥夺通讯自由和律师会见权利，我们无法获知更多的具体细节。王建兵在被单独关押期间身心状况极受影响，不仅饮食不规律、肠胃功能变差，而且精神疲糜、深受抑郁症困扰；黄雪琴被关押的前半年，体重骤减5kg（11lb），而其本人被捕前已经很瘦，体重原本不及50kg。
+### **1.1** 雪饼两人强迫失踪后遭遇五个多月的单独关押。
 
-**1.2** 黄雪琴代理律师被迫撤换为官派律师，现狱中处境不明。2022年3月下旬，黄家人委托的黄雪琴长期好友兼律师万淼焱为其代表律师，委托函同时送至看守所获黄雪琴本人亲自签名。但4月中旬，警方突然提供一份由黄雪琴签字的“解除律师声明”，声称解除了万律师的委托授权；万律师在4月下旬欲前往看守所与雪琴确认，但其会见申请也被看守所以“防疫”缘由拒绝。如今，黄雪琴代理律师已改由政府指派的律师代理，因其本人的通讯自由也被违法剥夺，家人和外界均无法得知黄雪琴关押近一年来的处境。此种情况非常令人担忧。黄雪琴于2019年因记录香港“反送中”运动第一次被捕时，其代表律师亦为其友人万淼焱；但此次在签署委托书后又迅速被撤换，不禁让人怀疑这是黄雪琴在被胁迫、非自愿情况下做出的不得已决定。
+2021年9月19日，广州警方以两人长期在家中组织社会聚会为由，以涉嫌“煽动颠覆国家政权罪”强行抓捕了两人，且一直未给家属寄送法律规定的“拘留通知书”。直至2022年4月1日，王建兵与律师首次会见才得知，建兵于被捕后的五个多月内被警方以“疫情隔离”的名义在迄今无人知晓的地点进行非法的单独关押审讯，直到第六个月才转回看守所集体关押。王建兵在单独关押期间遭受了数十次的疲劳审讯和来自身心灵多方面的肉体和精神折磨——这与“指定居所监视居住（指监，RSDL）”的实际关押情形无异，但警方通过这种方式规避了在书面文件上使用备受国际社会及联合国批评的“指监”措施。黄雪琴的羁押情况类似，但因其过去一年间被严重剥夺通讯自由和律师会见权利，我们无法获知更多的具体细节。王建兵在被单独关押期间身心状况极受影响，不仅饮食不规律、肠胃功能变差，而且精神疲糜、深受抑郁症困扰；黄雪琴被关押的前半年，体重骤减5kg（11lb），而其本人被捕前已经很瘦，体重原本不及50kg。
 
-**1.3** 公民社会伙伴遭遇警方多番骚扰、审讯及逼迁。自雪饼被抓后，广州警方联动全国多地警方，针对与雪饼相关的公民社会伙伴们持续进行了本地或跨地区的骚扰、传唤或审讯。据不完全统计，有超过70位雪饼朋友或家庭聚会参与者被传唤做笔录，其中亦有超过10位行动者被警方通过各种手段（如施压房东、恐吓家属、持续骚扰当事人等）要求搬离广州。广州警察在没有出示任何合法手续情况下，即对部分公民社会行动者进行了多次长达24小时的审讯和恐吓，且强行搜查和拷贝电子设备。更甚的是，警方强迫和威胁部分雪饼朋友签署由警方编造的虚假口供，要求他们指认雪饼两人曾参与过“颠覆国家政权”的所谓培训活动，并将王建兵家中的聚会捏造为批评政府的“政治性聚会”。过去一年，警方在侦查阶段采集、形成的多份笔录资料，基本都是警方单一编造的内容，或是在非法情形下胁迫部分聚会参与者/公民社会行动者签署下的虚假说明。雪饼两人的政治遭遇，正是中国政府对公民社会网络的持续强力打压的缩影。
+### **1.2** 黄雪琴代理律师被迫撤换为官派律师，现狱中处境不明。
 
-**2** 案件进展和下一步程序：已移送法院
+2022年3月下旬，黄家人委托的黄雪琴长期好友兼律师万淼焱为其代表律师，委托函同时送至看守所获黄雪琴本人亲自签名。但4月中旬，警方突然提供一份由黄雪琴签字的“解除律师声明”，声称解除了万律师的委托授权；万律师在4月下旬欲前往看守所与雪琴确认，但其会见申请也被看守所以“防疫”缘由拒绝。如今，黄雪琴代理律师已改由政府指派的律师代理，因其本人的通讯自由也被违法剥夺，家人和外界均无法得知黄雪琴关押近一年来的处境。此种情况非常令人担忧。黄雪琴于2019年因记录香港“反送中”运动第一次被捕时，其代表律师亦为其友人万淼焱；但此次在签署委托书后又迅速被撤换，不禁让人怀疑这是黄雪琴在被胁迫、非自愿情况下做出的不得已决定。
+
+### **1.3** 公民社会伙伴遭遇警方多番骚扰、审讯及逼迁。
+
+自雪饼被抓后，广州警方联动全国多地警方，针对与雪饼相关的公民社会伙伴们持续进行了本地或跨地区的骚扰、传唤或审讯。据不完全统计，有超过70位雪饼朋友或家庭聚会参与者被传唤做笔录，其中亦有超过10位行动者被警方通过各种手段（如施压房东、恐吓家属、持续骚扰当事人等）要求搬离广州。广州警察在没有出示任何合法手续情况下，即对部分公民社会行动者进行了多次长达24小时的审讯和恐吓，且强行搜查和拷贝电子设备。更甚的是，警方强迫和威胁部分雪饼朋友签署由警方编造的虚假口供，要求他们指认雪饼两人曾参与过“颠覆国家政权”的所谓培训活动，并将王建兵家中的聚会捏造为批评政府的“政治性聚会”。过去一年，警方在侦查阶段采集、形成的多份笔录资料，基本都是警方单一编造的内容，或是在非法情形下胁迫部分聚会参与者/公民社会行动者签署下的虚假说明。雪饼两人的政治遭遇，正是中国政府对公民社会网络的持续强力打压的缩影。
+
+## **2** 案件进展和下一步程序：已移送法院
 
 我们从各渠道获知，王建兵案件在8月12日首次移送广州市中级人民法院，而黄雪琴的情况仍然处于黑洞。推测在不分案的情况下，两人案件现在应该一起到达法院受理阶段。根据《刑事诉讼法》第202条规定，若法院受理案件，应该最晚在180天内审结并判决。而在这180天的一审阶段，法院仍然可以将案件退回人民检察院进行补充侦查（至长一个月），然后重新送回法院重新计算开庭日期。
 
 尽管雪饼案已经移送法院进入到第一审阶段，但我们仍然无法预测案件何时终了落地。中国的《刑事诉讼法》给当局预留了太多自由裁量权和拖延庭审的空间，我们仍然无法预估此案何时会开庭，我们也可预见雪饼案将会是一个不公开、不公平、自编自导自演的一个庭审。在这个阶段，相信迎接雪饼的会是同样巨大的政治压力，尤其是黄雪琴，连自由聘请自己辩护律师的权力都被剥夺。这都是为了迫使和确保两人在最后庭审现场中能认罪认罚，承认本不存在的荒谬控罪。
 
-**3** 来自雪饼朋友的呼吁
+## **3** 来自雪饼朋友的呼吁
 
 雪饼两人与我们已经整整失联一年了。在暗无天日、单独关押、甚至没有律师会见的日子里，我们完全无法想象她们正在遭遇怎样的酷刑和羞辱。如今，中国政府打压公民社会和行动者的策略非常地明显，通过对外不断地罗织罪证、在内通过单独关押内发生的酷刑折磨，亦切断行动者与律师的沟通和会见渠道，通过不断的拖延时间来迫使行动者承认莫须有的罪名。雪饼正在遭遇这些非人道的对待，我们无比愤怒！
 
@@ -695,7 +701,7 @@ categories:
 
 \*我们希望所有受到影响的雪饼的朋友和公民社会的伙伴能够保持坚强。政治的打压会让我们深陷恐惧，只有共同团结和守望相助才能让我们保持力量和自由，这也是雪饼一直以来在努力的事情。
 
-**4** 你可以怎么声援/支持雪饼？
+## **4** 你可以怎么声援/支持雪饼？
 
 或许争取释放雪饼的道路将非常艰巨，但是我们的每一个行动和努力将有助于大大提高社会公众和国际社会对雪饼的关注，这些压力必然会帮助到改善雪饼在狱中的生存处境和获得更多有尊严的对待。每一个小行动动很重要！
 
