Update Post “365-en”

--- a/source/_posts/365-en.md
+++ b/source/_posts/365-en.md
@@ -9,7 +9,7 @@ categories:
 tags:
   - English
 ---
-<!--\\[if gte mso 9]><xml>
+<!--\\\[if gte mso 9]><xml>
  <w:WordDocument>
   <w:View>Normal</w:View>
   <w:Zoom>0</w:Zoom>
@@ -58,9 +58,9 @@ tags:
    <m:intLim m:val="subSup"/>
    <m:naryLim m:val="undOvr"/>
   </m:mathPr></w:WordDocument>
-</xml><!\\[endif]-->
+</xml><!\\\[endif]-->
 
-<!--\\[if gte mso 9]><xml>
+<!--\\\[if gte mso 9]><xml>
  <w:LatentStyles DefLockedState="false" DefUnhideWhenUsed="false"
   DefSemiHidden="false" DefQFormat="false" DefPriority="99"
   LatentStyleCount="376">
@@ -639,9 +639,9 @@ tags:
   <w:LsdException Locked="false" SemiHidden="true" UnhideWhenUsed="true"
    Name="Smart Link"/>
  </w:LatentStyles>
-</xml><!\\[endif]-->
+</xml><!\\\[endif]-->
 
-<!--\\[if gte mso 10]>
+<!--\\\[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -658,7 +658,7 @@ tags:
 	font-family:"Times New Roman",serif;
 	border:none;}
 </style>
-<!\\[endif]-->
+<!\\\[endif]-->
 
 <!--StartFragment-->
 
@@ -720,15 +720,15 @@ It may be challenging to campaign for XueBing’s release, but our effort to inc
 
 **A) Postcard Campaign:** Please send a postcard for XueBing and do not forget to **TAKE a picture** of your postcard and email us before mailing it.
 
-  *    Postcard Mailing Address:*
+   *   Postcard Mailing Address:*
 
-  *    Wang Jianbing* 王建兵 *OR Huang Xueqin* 黄雪琴 *(one name per postcard)*
+   *   Wang Jianbing* 王建兵 *OR Huang Xueqin* 黄雪琴 *(one name per postcard)*
 
-  *    Guangzhou Di San Kanshousuo (No.3 Detention Center)*
+   *   Guangzhou Di San Kanshousuo (No.3 Detention Center)*
 
-  *    189 Qingcha Rd. Baiyun District, Guangzhou 510430, Guangdong, China* 
+   *   189 Qingcha Rd. Baiyun District, Guangzhou 510430, Guangdong, China* 
 
-  *    Email backup: [freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)*
+   *   Email backup: [freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)*
 
 **B) Photo Support:** Please take a picture with photos of Huang Xueqin or Wang Jianbing in your city, and send the solidarity picture to email ([freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)) as part of our social media campaign. If you have security concerns, please blur your face with an image editing app before sending or write to us for assistance.
 
@@ -750,28 +750,20 @@ September 19, 2022**
 
 **Appendix I Support from International Civil Society**
 
-<!--\\[if !supportLists]-->a.    <!--\\[endif]-->Following Huang and Wang’s enforced disappearance and arbitrary detention, \[Amnesty International](http://www.apple.com), \[Reporters Without Borders](https://rsf.org/en/news/rsf-calls-release-chinese-investigative-journalist-huang-xueqin), \[International Federation of Journalists](https://www.ifj.org/media-centre/news/detail/category/press-releases/article/china-chinese-journalist-huang-xueqin-thought-detained-after-disappearance.html), \[Front Line Defenders](https://www.frontlinedefenders.org/en/case/china-human-rights-defenders-huang-xueqing-and-wang-jianbing-facing-inciting-subversion), \[Chinese Human Rights Defenders](https://www.nchrd.org/2021/09/china-immediately-release-metoo-activist-and-fellow-civil-society-advocate/), and the \[EU Delegation](https://eeas.europa.eu/delegations/china_en/108637/StatementoftheEUDelegationtoChinaontheInternationalHumanRightsDay) to China expressed their support and concern through statements.
+a﻿. Following Huang and Wang’s enforced disappearance and arbitrary detention, [Amnesty International](http://www.apple.com), [Reporters Without Borders](https://rsf.org/en/news/rsf-calls-release-chinese-investigative-journalist-huang-xueqin), [International Federation of Journalists](https://www.ifj.org/media-centre/news/detail/category/press-releases/article/china-chinese-journalist-huang-xueqin-thought-detained-after-disappearance.html), [Front Line Defenders](https://www.frontlinedefenders.org/en/case/china-human-rights-defenders-huang-xueqing-and-wang-jianbing-facing-inciting-subversion), [Chinese Human Rights Defenders](https://www.nchrd.org/2021/09/china-immediately-release-metoo-activist-and-fellow-civil-society-advocate/), and the [EU Delegation](https://eeas.europa.eu/delegations/china_en/108637/StatementoftheEUDelegationtoChinaontheInternationalHumanRightsDay) to China expressed their support and concern through statements.
 
-<!--\\[if !supportLists]-->b.    <!--\\[endif]-->In March 2022, \[International Service for Human Rights](https://twitter.com/FreeXueBing/status/1502135567919820803) (ISHR) and Japan-based human rights organization \[Human Rights Now](https://hrn.or.jp/eng/news/2022/03/16/hrc49_oral_statement_on_china_hrds/) spoke at the United Nations Human Rights Council, calling on the Office of the High Commissioner for Human Rights (OHCHR) to pay attention to the XueBing crackdown and to pressure the Chinese government to release them immediately.
+b. In March 2022, [International Service for Human Rights](https://twitter.com/FreeXueBing/status/1502135567919820803) (ISHR) and Japan-based human rights organization [Human Rights Now](https://hrn.or.jp/eng/news/2022/03/16/hrc49_oral_statement_on_china_hrds/) spoke at the United Nations Human Rights Council, calling on the Office of the High Commissioner for Human Rights (OHCHR) to pay attention to the XueBing crackdown and to pressure the Chinese government to release them immediately.
 
-<!--\\[if !supportLists]-->c.    <!--\\[endif]-->In the UK, \[55 feminist scholars](https://free-xueq-jianb.github.io/2022/02/11/55_scholars_support/) and \[83 members of the UK University and College Union (UCU)](https://docs.google.com/forms/d/e/1FAIpQLSfWshZFjBN5Qyn9TCEaRDS2HfTZV2o6JPWAA-vFjb1VVCemtg/viewform) respectively initiated and participated in a joint signature, demanding that the Chinese government immediately release Huang and Wang; \[112 Chevening scholars](https://free-xueq-jianb.github.io/2021/12/07/statement1208/) issued a joint statement expressing serious concern over the arbitrary detention and inability to visit the activists, and urged the British Foreign & Commonwealth Office and its Chevening Committee to speak out on the matter.
+c. In the UK, [55 feminist scholars](https://free-xueq-jianb.github.io/2022/02/11/55_scholars_support/) and [83 members of the UK University and College Union (UCU)](https://docs.google.com/forms/d/e/1FAIpQLSfWshZFjBN5Qyn9TCEaRDS2HfTZV2o6JPWAA-vFjb1VVCemtg/viewform) respectively initiated and participated in a joint signature, demanding that the Chinese government immediately release Huang and Wang; [112 Chevening scholars](https://free-xueq-jianb.github.io/2021/12/07/statement1208/) issued a joint statement expressing serious concern over the arbitrary detention and inability to visit the activists, and urged the British Foreign & Commonwealth Office and its Chevening Committee to speak out on the matter.
 
-<!--\\[if !supportLists]-->d.    <!--\\[endif]-->Nearly 100 friends from all over the world sent \[postcards](https://free-xueq-jianb.github.io/2021/12/26/postcard_event/) to Huang and Wang, expressing their concern and blessings for them and protesting against the police illegality. In addition, supporters in London, Hong Kong, Taipei, the United Arab Emirates and other places wore \[masks](https://free-xueq-jianb.github.io/2022/02/05/xuebing_world/) of Huang and Wang to protest in various parts of the city, calling on the Chinese government to release the two.
+d. Nearly 100 friends from all over the world sent [postcards](https://free-xueq-jianb.github.io/2021/12/26/postcard_event/) to Huang and Wang, expressing their concern and blessings for them and protesting against the police illegality. In addition, supporters in London, Hong Kong, Taipei, the United Arab Emirates and other places wore [masks](https://free-xueq-jianb.github.io/2022/02/05/xuebing_world/) of Huang and Wang to protest in various parts of the city, calling on the Chinese government to release the two.
 
-<!--\\[if !supportLists]-->e.    <!--\\[endif]-->On the day of May 3, 2022, the World Press Freedom Day, a \[social media campaign](https://free-xueq-jianb.github.io/2022/05/03/pressday/) initiated by the human rights NGO ISHR, joining with half a dozen of other international NGOs, including Reporters Without Borders, Front Line Defenders, Chinese Human Rights Defenders, etc, to show great concern on the situations of the imprisoned journalist Huang Xueqin, and call on the Chinese government release Huang Xueqin and Wang Jianbing immediately and unconditionally.
+e. On the day of May 3, 2022, the World Press Freedom Day, a [social media campaign](https://free-xueq-jianb.github.io/2022/05/03/pressday/) initiated by the human rights NGO ISHR, joining with half a dozen of other international NGOs, including Reporters Without Borders, Front Line Defenders, Chinese Human Rights Defenders, etc, to show great concern on the situations of the imprisoned journalist Huang Xueqin, and call on the Chinese government release Huang Xueqin and Wang Jianbing immediately and unconditionally.
 
-<!--\\[if !supportLists]-->f.     <!--\\[endif]-->In \[February 2022](https://spcommreports.ohchr.org/TMResultsBase/DownLoadPublicCommunicationFile?gId=27049), six of UN independent expert- including the UN Special Rapporteur on Human Rights Defenders and the Working Group on Arbitrary Detention - sent a letter to the Chinese government expressing serious concern over Wang Jianbing’s enforced disappearance and arbitrary detention. \[On April 1](https://spcommreports.ohchr.org/TMResultsBase/DownLoadFile?gId=36931), the Chinese government simply denied the allegation. \[On May 11](https://www.ohchr.org/sites/default/files/2022-06/A-HRC-WGAD-2022-9-CHN-AEV.pdf), the UN Working Group on Arbitrary Detention formally declared that Wang’s detention to be “arbitrary” and urged authorities to ensure his immediate release and access to remedy.
+f. n [February 2022](https://spcommreports.ohchr.org/TMResultsBase/DownLoadPublicCommunicationFile?gId=27049), six of UN independent expert- including the UN Special Rapporteur on Human Rights Defenders and the Working Group on Arbitrary Detention - sent a letter to the Chinese government expressing serious concern over Wang Jianbing’s enforced disappearance and arbitrary detention. [On April 1](https://spcommreports.ohchr.org/TMResultsBase/DownLoadFile?gId=36931), the Chinese government simply denied the allegation. [On May 11](https://www.ohchr.org/sites/default/files/2022-06/A-HRC-WGAD-2022-9-CHN-AEV.pdf), the UN Working Group on Arbitrary Detention formally declared that Wang’s detention to be “arbitrary” and urged authorities to ensure his immediate release and access to remedy.
 
-<!--\\[if !supportLists]-->g.    <!--\\[endif]-->In May 2022, Huang Xueqin was nominated by Index on Censorship, an NGO that has long been concerned with freedom of expression globally, as one of the three candidates for the 2022 \["Freedom of Expression Awards" in journalism](https://www.indexoncensorship.org/2022/05/journalism-2022/). The award honors those standing on the front lines of freedom of expression around the world, of which Huang Xueqin is seen as a key figure – her significant role in covering and initiating the Chinese MeToo movement, as well in supporting the sexual victims.
+g. In May 2022, Huang Xueqin was nominated by Index on Censorship, an NGO that has long been concerned with freedom of expression globally, as one of the three candidates for the 2022 ["Freedom of Expression Awards" in journalism](https://www.indexoncensorship.org/2022/05/journalism-2022/). The award honors those standing on the front lines of freedom of expression around the world, of which Huang Xueqin is seen as a key figure – her significant role in covering and initiating the Chinese MeToo movement, as well in supporting the sexual victims.
 
-<!--\\[if !supportLists]-->h.    <!--\\[endif]-->In June 2022, Huang Xueqin was awarded \[Wallis Annenberg Justice for Women Journalists Award](https://www.iwmf.org/community/xueqin-sophia-huang/) by the International Women's Media Fund (IWMF), which honors women journalists who show remarkable persistence and bravery. The award praised Huang's career reporting on injustice & corruption in China – including pioneering the #MeToo movement.
-
-<!--\\[if !supportFootnotes]-->
-
-- - -
-
-<!--\\[endif]-->
-
-\[<!--[if !supportFootnotes]-->\[1]<!--\\[endif]-->](#_ftnref1) Previously, XueBing were detailed at Guangzhou No.1 Detention Center, but since the beginning of July 2022, the Guangzhou No. 1 Detention Center was merged into the No. 3 Detention Center.
+h. In June 2022, Huang Xueqin was awarded [Wallis Annenberg Justice for Women Journalists Award](https://www.iwmf.org/community/xueqin-sophia-huang/) by the International Women's Media Fund (IWMF), which honors women journalists who show remarkable persistence and bravery. The award praised Huang's career reporting on injustice & corruption in China – including pioneering the #MeToo movement.
 
 <!--EndFragment-->
