Update Post “365-en”

--- a/source/_posts/365-en.md
+++ b/source/_posts/365-en.md
@@ -760,7 +760,7 @@ d. Nearly 100 friends from all over the world sent [postcards](https://free-xueq
 
 e. On the day of May 3, 2022, the World Press Freedom Day, a [social media campaign](https://free-xueq-jianb.github.io/2022/05/03/pressday/) initiated by the human rights NGO ISHR, joining with half a dozen of other international NGOs, including Reporters Without Borders, Front Line Defenders, Chinese Human Rights Defenders, etc, to show great concern on the situations of the imprisoned journalist Huang Xueqin, and call on the Chinese government release Huang Xueqin and Wang Jianbing immediately and unconditionally.
 
-f. n [February 2022](https://spcommreports.ohchr.org/TMResultsBase/DownLoadPublicCommunicationFile?gId=27049), six of UN independent expert- including the UN Special Rapporteur on Human Rights Defenders and the Working Group on Arbitrary Detention - sent a letter to the Chinese government expressing serious concern over Wang Jianbing’s enforced disappearance and arbitrary detention. [On April 1](https://spcommreports.ohchr.org/TMResultsBase/DownLoadFile?gId=36931), the Chinese government simply denied the allegation. [On May 11](https://www.ohchr.org/sites/default/files/2022-06/A-HRC-WGAD-2022-9-CHN-AEV.pdf), the UN Working Group on Arbitrary Detention formally declared that Wang’s detention to be “arbitrary” and urged authorities to ensure his immediate release and access to remedy.
+f. In [February 2022](https://spcommreports.ohchr.org/TMResultsBase/DownLoadPublicCommunicationFile?gId=27049), six of UN independent expert- including the UN Special Rapporteur on Human Rights Defenders and the Working Group on Arbitrary Detention - sent a letter to the Chinese government expressing serious concern over Wang Jianbing’s enforced disappearance and arbitrary detention. [On April 1](https://spcommreports.ohchr.org/TMResultsBase/DownLoadFile?gId=36931), the Chinese government simply denied the allegation. [On May 11](https://www.ohchr.org/sites/default/files/2022-06/A-HRC-WGAD-2022-9-CHN-AEV.pdf), the UN Working Group on Arbitrary Detention formally declared that Wang’s detention to be “arbitrary” and urged authorities to ensure his immediate release and access to remedy.
 
 g. In May 2022, Huang Xueqin was nominated by Index on Censorship, an NGO that has long been concerned with freedom of expression globally, as one of the three candidates for the 2022 ["Freedom of Expression Awards" in journalism](https://www.indexoncensorship.org/2022/05/journalism-2022/). The award honors those standing on the front lines of freedom of expression around the world, of which Huang Xueqin is seen as a key figure – her significant role in covering and initiating the Chinese MeToo movement, as well in supporting the sexual victims.
 
