Update Post “365-en”

--- a/source/_posts/365-en.md
+++ b/source/_posts/365-en.md
@@ -666,7 +666,7 @@ tags:
 
 中文版请点击[这里](../365)
 
-On the afternoon of September 19, 2021, Human rights defenders Huang **Xue**qin and Wang Jian**bing** (“***XueBing***” for short) were forcibly arrested by the Guangzhou police on suspicion of "inciting subversion of state power”. Using COVID as an excuse, they were held for at least five months in solitary confinement, and subjected to secret interrogation, in conditions similar to those of ‘residential surveillance in a designated location’, or RSDL., a form of detention that seriously violates international human rights principles.
+On the afternoon of September 19, 2021, Human rights defenders **Huang Xueqin** and **Wang Jianbing** (“***XueBing***” for short) were forcibly arrested by the Guangzhou police on suspicion of "inciting subversion of state power”. Using COVID as an excuse, they were held for at least five months in solitary confinement, and subjected to secret interrogation, in conditions similar to those of ‘residential surveillance in a designated location’, or RSDL., a form of detention that seriously violates international human rights principles.
 
 The weekly gatherings with friends that XueBing organized and participated in were characterized by the police as a threat to national security. Over the past year, the police have continually fabricated evidence based on these false accusations, coerced Huang into replacing her lawyer, interrogated and harassed dozens of civil activists. This further clamped down on China’s already weakened civil society.
 
@@ -720,15 +720,15 @@ It may be challenging to campaign for XueBing’s release, but our effort to inc
 
 **A) Postcard Campaign:** Please send a postcard for XueBing and do not forget to **TAKE a picture** of your postcard and email us before mailing it.
 
-   *   Postcard Mailing Address:*
+Postcard Mailing Address:
 
-   *   Wang Jianbing* 王建兵 *OR Huang Xueqin* 黄雪琴 *(one name per postcard)*
+Wang Jianbing 王建兵 OR Huang Xueqin 黄雪琴 (one name per postcard)
 
-   *   Guangzhou Di San Kanshousuo (No.3 Detention Center)*
+Guangzhou Di San Kanshousuo (No.3 Detention Center)
 
-   *   189 Qingcha Rd. Baiyun District, Guangzhou 510430, Guangdong, China* 
+189 Qingcha Rd. Baiyun District, Guangzhou 510430, Guangdong, China
 
-   *   Email backup: [freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)*
+Email backup: [freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)
 
 **B) Photo Support:** Please take a picture with photos of Huang Xueqin or Wang Jianbing in your city, and send the solidarity picture to email ([freexuebing@protonmail.com](mailto:freexuebing@protonmail.com)) as part of our social media campaign. If you have security concerns, please blur your face with an image editing app before sending or write to us for assistance.
 
