--- a/source/_posts/365.md
+++ b/source/_posts/365.md
@@ -6,7 +6,7 @@ cover: https://i.imgur.com/Lc39Yw6.png
 categories:
   - 案件通报
 ---
-<!--\\\\\\[if gte mso 9]><xml>
+<!--\\\\\\\[if gte mso 9]><xml>
  <w:WordDocument>
   <w:View>Normal</w:View>
   <w:Zoom>0</w:Zoom>
@@ -55,9 +55,9 @@ categories:
    <m:intLim m:val="subSup"/>
    <m:naryLim m:val="undOvr"/>
   </m:mathPr></w:WordDocument>
-</xml><!\\\\\\[endif]-->
+</xml><!\\\\\\\[endif]-->
 
-<!--\\\\\\[if gte mso 9]><xml>
+<!--\\\\\\\[if gte mso 9]><xml>
  <w:LatentStyles DefLockedState="false" DefUnhideWhenUsed="false"
   DefSemiHidden="false" DefQFormat="false" DefPriority="99"
   LatentStyleCount="376">
@@ -636,9 +636,9 @@ categories:
   <w:LsdException Locked="false" SemiHidden="true" UnhideWhenUsed="true"
    Name="Smart Link"/>
  </w:LatentStyles>
-</xml><!\\\\\\[endif]-->
+</xml><!\\\\\\\[endif]-->
 
-<!--\\\\\\[if gte mso 10]>
+<!--\\\\\\\[if gte mso 10]>
 <style>
  /* Style Definitions */
  table.MsoNormalTable
@@ -655,7 +655,7 @@ categories:
 	font-family:"Times New Roman",serif;
 	border:none;}
 </style>
-<!\\\\\\[endif]-->
+<!\\\\\\\[endif]-->
 
 <!--StartFragment-->
 
@@ -705,7 +705,7 @@ F﻿or English version, please click on [here](../365-en)
 
 ## **4** 你可以怎么声援/支持雪饼？
 
-或许争取释放雪饼的道路将非常艰巨，但是我们的每一个行动和努力将有助于大大提高社会公众和国际社会对雪饼的关注，这些压力必然会帮助到改善雪饼在狱中的生存处境和获得更多有尊严的对待。每一个小行动动很重要！
+或许争取释放雪饼的道路将非常艰巨，但是我们的每一个行动和努力将有助于大大提高社会公众和国际社会对雪饼的关注，这些压力必然会帮助到改善雪饼在狱中的生存处境和获得更多有尊严的对待。每一个小行动很重要！
 
 A) 请你为关押于广州市第三看守所的黄雪琴和王建兵写一封明信片，并在寄送明信片的同时拍照留存寄送到我们电子邮箱（重要）。
 
