Update Post “365-en”

--- a/source/_posts/365-en.md
+++ b/source/_posts/365-en.md
@@ -3,7 +3,7 @@ layout: post
 title: Statement on the One-year Enforced Disappearance and Arbitrary Detention
   of Huang Xueqin and Wang Jianbing, From Friends
 date: 2022-09-19T03:34:09.284Z
-cover: https://i.imgur.com/Lc39Yw6.png
+cover: https://i.imgur.com/aSCMePI.png
 categories:
   - 案件通报
 tags:
@@ -662,7 +662,7 @@ tags:
 
 <!--StartFragment-->
 
-![](https://i.imgur.com/Lc39Yw6.png)
+![](https://i.imgur.com/aSCMePI.png)
 
 中文版请点击[这里](../365)
 
