--- a/source/_posts/365.md
+++ b/source/_posts/365.md
@@ -2,7 +2,7 @@
 layout: post
 title: 【雪饼一年】行动者黄雪琴和王建兵（“雪饼”）被捕一年声明
 date: 2022-09-19T03:26:00.000Z
-cover: https://i.imgur.com/Lc39Yw6.png
+cover: https://i.imgur.com/aSCMePI.png
 categories:
   - 案件通报
 ---
@@ -659,7 +659,7 @@ categories:
 
 <!--StartFragment-->
 
-![](https://i.imgur.com/Lc39Yw6.png)
+![](https://i.imgur.com/aSCMePI.png)
 
 F﻿or English version, please click on [here](../365-en)
 
